--- a/_sources/lectures/nlp_intro/index.ipynb
+++ b/_sources/lectures/nlp_intro/index.ipynb
@@ -14,6 +14,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e9c99162",
    "metadata": {
@@ -25,11 +26,11 @@
    "source": [
     "## 📜 Course Description\n",
     "\n",
-    "- This course covers the basics of natural language processing, including text pre-processing, part-of-speech tagging, parsing, and semantic analysis. \n",
-    "- The course will also cover advanced topics such as word embeddings. Upon completion of this course, students will be able to apply these techniques to real-world data sets.\n"
+    "This course provides an introduction to natural language processing (NLP), a subfield of artificial intelligence concerned with the interaction between computers and human language. The course will cover the fundamental concepts and techniques of NLP, including text pre-processing, morphology, syntax, semantics, text classification, topic modeling, and word embeddings.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ee7884ff",
    "metadata": {
@@ -41,10 +42,13 @@
    "source": [
     "## ♾️ Learning Goals\n",
     "\n",
-    "1. Be able to describe key concepts, models and challenges in Natural Language Processing\n",
-    "2. Be able to describe, implement, and apply a variety of fundamental algorithms in Natural Language Processing\n",
-    "3. Be able to describe and evaluate more complex software systems for various Natural Language Processing tasks\n",
-    "4. Be able to describe current approaches, datasets and systems for various Natural Language Processing tasks\n"
+    "By the end of this course, students will be able to:\n",
+    "\n",
+    "- Understand key concepts, models, and challenges in natural language processing\n",
+    "- Implement and apply fundamental algorithms in NLP\n",
+    "- Evaluate and use software systems for various NLP tasks\n",
+    "- Understand current approaches, datasets, and systems for various NLP tasks\n",
+    "- Build NLP models for various applications\n"
    ]
   },
   {
@@ -105,6 +109,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ddf1c678",
    "metadata": {
@@ -118,10 +123,11 @@
     "\n",
     "You can find the lecture notes of the course by clicking on the following link:\n",
     "\n",
-    "https://entelecheia.github.io/ekorpkit-book/docs/lectures/intro_nlp"
+    "https://lecture.entelecheia.ai/lectures/nlp_intro"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "31422e23",
    "metadata": {
@@ -131,19 +137,17 @@
     "tags": []
    },
    "source": [
-    "## 🎲 The Whole Game\n",
+    "## 🎲 Whole Game of NLP\n",
     "\n",
-    "- Harvard Professor David Perkins's book, [Making Learning Whole](https://www.amazon.com/Making-Learning-Whole-Principles-Transform/dp/0470633719), popularized the idea of \"teaching the whole game.\" \n",
-    "- We don't require kids to memorize all the rules of baseball and understand all the technical details before we let them play the game. \n",
-    "- Rather, they start playing with a just general sense of it, and then gradually learn more rules/details as time goes on.\n",
-    "- This course takes this approach to deep learning.\n",
-    "- Most courses on deep learning focus only on what the network “is” and how it works. \n",
-    "- This course is different: instead of teaching just the network, we show how to use it to solve problems. \n",
-    "- We start by teaching a complete, working, very usable deep learning network using simple, expressive tools. Then we show how to use it to solve real-world problems.\n",
-    "- This approach has several advantages:\n",
-    "  - It makes deep learning more accessible and understandable. Students can see how deep learning can be used in practice, and they can immediately start using it to solve their own problems.\n",
-    "  - It helps students learn the whole game of machine learning, not just deep learning. In addition to showing how to use a state-of-the-art deep learning network, we also teach important concepts such as data preprocessing, model evaluation, and deployment.\n",
-    "  - It gives students a strong foundation for further study. Because the course covers both the theory and practice of deep learning, students will be well prepared for more advanced courses on the subject."
+    "In this course, we apply the concept of \"teaching the whole game\" to natural language processing (NLP). We believe that just like in baseball, students should be able to start playing with a general sense of NLP and gradually learn more rules and details as they progress.\n",
+    "\n",
+    "Unlike many NLP courses that focus only on the technical aspects of the field, we take a practical approach to NLP. We show how to use fundamental concepts and techniques of NLP, including text pre-processing, morphology, syntax, semantics, text classification, topic modeling, and word embeddings, to solve real-world problems.\n",
+    "\n",
+    "We begin by introducing students to a complete, working, and very usable NLP system that uses simple and expressive tools. Then, we gradually introduce more advanced concepts, showing students how to apply them to real-world datasets.\n",
+    "\n",
+    "This approach has several advantages. It makes NLP more accessible and understandable to students, and it allows them to immediately start using NLP to solve their own problems. Furthermore, it helps students learn the whole game of NLP, not just individual concepts or techniques. By covering both the theory and practice of NLP, students will be well-prepared for further study or practical applications in the field.\n",
+    "\n",
+    "> Harvard Professor David Perkins's book, [Making Learning Whole](https://www.amazon.com/Making-Learning-Whole-Principles-Transform/dp/0470633719), popularized the idea of \"teaching the whole game.\" \n"
    ]
   },
   {
