docs: update intro NLP

--- a/book/lectures/nlp_intro/intro.ipynb
+++ b/book/lectures/nlp_intro/intro.ipynb
@@ -62,7 +62,7 @@
     "tags": []
    },
    "source": [
-    "## IBM's Watson: Winning at Jeopardy and Beyond\n",
+    "### IBM's Watson: Winning at Jeopardy and Beyond\n",
     "\n",
     "IBM's Watson is a computer system designed to answer questions posed in natural language. It made its public debut on the game show Jeopardy! in 2011, where it competed against human contestants and won.\n",
     "\n",
@@ -111,7 +111,7 @@
     "tags": []
    },
    "source": [
-    "## Related Areas of NLP\n",
+    "### Related Areas of NLP\n",
     "\n",
     "Natural Language Processing (NLP) is a complex and interdisciplinary field that intersects with many other areas of computer science and linguistics. Some of the key related areas of NLP include:\n",
     "\n",
@@ -136,7 +136,7 @@
     "tags": []
    },
    "source": [
-    "## Goals of NLP\n",
+    "### Goals of NLP\n",
     "\n",
     "The overarching goal of Natural Language Processing (NLP) is to enable computers to understand, analyze, and generate human language. Some of the specific desiderata, or goals, for NLP include:\n",
     "\n",
@@ -165,7 +165,7 @@
    "id": "3279658c",
    "metadata": {},
    "source": [
-    "## Ethical Issues in NLP\n",
+    "### Ethical Issues in NLP\n",
     "\n",
     "While natural language processing (NLP) has the potential to revolutionize many industries and applications, it also raises important ethical concerns. These include:\n",
     "\n",
@@ -179,32 +179,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c6293a8c",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
-   "source": [
-    "## Why study or research NLP?\n",
-    "\n",
-    "- NLP is an interesting and important field with a wide range of applications. \n",
-    "- It is constantly evolving, which means there are always new challenges to tackle.\n",
-    "- NLP is also an interdisciplinary field, drawing from linguistics, computer science, and psychology. This means that there are many different perspectives and approaches to NLP, making it a rich and fascinating area to study.\n",
-    "- Language is the key to understanding knowledge and human intelligence.  \n",
-    "- It is also the key to communication and social interaction. \n",
-    "- NLP is a powerful tool that can help us to unlock the secrets of language and human cognition, and to build better systems for communication and social interaction.\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "ec516335",
    "metadata": {},
    "source": [
-    "## Why Study or Research NLP?\n",
+    "## Why study or research NLP?\n",
     "\n",
     "There are many compelling reasons to study or research natural language processing (NLP):\n",
     "\n",
@@ -272,6 +252,25 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "0101421a",
+   "metadata": {},
+   "source": [
+    "## Text and Image: Interdisciplinary Techniques for NLP\n",
+    "\n",
+    "There are several techniques that enable going between text and images, which have several applications in areas like computer vision, image recognition, and natural language processing. Some of these techniques include:\n",
+    "\n",
+    "- **Image Captioning:** This is a process of generating a textual description of an image, where the text describes the visual content of the image.\n",
+    "\n",
+    "- **Visual Question Answering (VQA):** This is a task of answering questions about an image.\n",
+    "\n",
+    "- **Visual Dialog:** This is a process of generating a dialog between a human and a machine agent about an image.\n",
+    "\n",
+    "These techniques have several interesting and useful applications, such as generating image descriptions for visually impaired people, providing detailed information about images in e-commerce websites, and assisting visually impaired people in their daily lives.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "cd741b9e",
    "metadata": {
     "slideshow": {
@@ -302,25 +301,6 @@
     "- **Legal:** NLP is used in e-discovery to extract relevant information from legal documents, and to automate document review and contract analysis.\n",
     "\n",
     "These are just a few examples of the many real-world applications of NLP, and the list is constantly growing as the technology advances and new opportunities arise.\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "8b541c47",
-   "metadata": {},
-   "source": [
-    "## Text and Image: Interdisciplinary Techniques for NLP\n",
-    "\n",
-    "There are several techniques that enable going between text and images, which have several applications in areas like computer vision, image recognition, and natural language processing. Some of these techniques include:\n",
-    "\n",
-    "- **Image Captioning:** This is a process of generating a textual description of an image, where the text describes the visual content of the image.\n",
-    "\n",
-    "- **Visual Question Answering (VQA):** This is a task of answering questions about an image.\n",
-    "\n",
-    "- **Visual Dialog:** This is a process of generating a dialog between a human and a machine agent about an image.\n",
-    "\n",
-    "These techniques have several interesting and useful applications, such as generating image descriptions for visually impaired people, providing detailed information about images in e-commerce websites, and assisting visually impaired people in their daily lives.\n"
    ]
   },
   {
@@ -651,7 +631,7 @@
     "tags": []
    },
    "source": [
-    "## What does it take to understand the text?\n",
+    "### What does it take to understand the text?\n",
     "\n",
     "Understanding text requires several skills and strategies, including:\n",
     "\n",
@@ -1004,6 +984,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d8abc38e",
    "metadata": {
@@ -1013,7 +994,7 @@
     "tags": []
    },
    "source": [
-    "## Question Answering on SQuAD 1.1\n",
+    "### Question Answering on SQuAD 1.1\n",
     "\n",
     "With respect to the SQuAD dataset, human performance is quite high, with a F1 score of around 92% on the test set.\n",
     "\n",
@@ -1043,8 +1024,7 @@
    "id": "49cafc20",
    "metadata": {},
    "source": [
-    "\n",
-    "## Why NLP is more difficult in Korean?\n",
+    "### Why NLP is more difficult in Korean?\n",
     "\n",
     "NLP is considered more difficult in Korean due to several unique characteristics of the language. While Korean is not considered a low-resource language, it presents challenges for NLP due to the following factors:\n",
     "\n",
