--- a/book/references.bib
+++ b/book/references.bib
@@ -268,3 +268,13 @@
   year={2020},
 	url={https://ojs.aaai.org/index.php/AAAI/article/view/6609},
 }
+
+
+# MLOps
+@article{sculley2015hidden,
+  title={Hidden technical debt in machine learning systems},
+  author={Sculley, David and Holt, Gary and Golovin, Daniel and Davydov, Eugene and Phillips, Todd and Ebner, Dietmar and Chaudhary, Vinay and Young, Michael and Crespo, Jean-Francois and Dennison, Dan},
+  journal={Advances in neural information processing systems},
+  volume={28},
+  year={2015}
+}
