docs: update index, intro for deep nlp

--- a/book/lectures/nlp_deep/index.ipynb
+++ b/book/lectures/nlp_deep/index.ipynb
@@ -14,6 +14,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e9c99162",
    "metadata": {
@@ -25,11 +26,11 @@
    "source": [
     "## 📜 Course Description\n",
     "\n",
-    "- This course aims to cover cutting-edge deep learning methods for natural language processing. \n",
-    "- The topics include word embeddings and contextualized word embeddings; language models; transformers; pre-training and fine-tuning; sequence tagging (NER, question answering); sequence generation (summarization, machine translation), zero-shot learning, etc.\n"
+    "This course provides an in-depth introduction to deep learning techniques for natural language processing. The course will cover the latest advances in deep learning research for NLP, with a focus on pre-trained language models and fine-tuning. Students will gain hands-on experience in developing deep learning models for a variety of NLP tasks using PyTorch and Hugging Face's Transformers library. The course will also cover reinforcement learning for NLP and its application in ChatGPT.\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ee7884ff",
    "metadata": {
@@ -42,11 +43,10 @@
     "## ♾️ Learning Goals\n",
     "\n",
     "By the end of this course, students will be able to: \n",
-    "- Understand fundamental concepts in natural language processing, including text representation, sequence modeling, and neural machine translation. \n",
-    "- Understand the state-of-the-art deep learning methods for natural language processing, including word embeddings and contextualized word embeddings; language models; transformers; pre-training and fine-tuning; sequence tagging (NER, question answering); sequence generation (summarization, machine translation), zero-shot learning, etc. \n",
-    "- Implement key algorithms in natural language processing using deep learning frameworks such as PyTorch or TensorFlow. \n",
-    "- Train and tune state-of-the-art models on large-scale datasets. \n",
-    "- Read and understand recent research papers in natural language processing.\n"
+    "- Understand the latest advances in deep learning research for NLP\n",
+    "- Develop deep learning models for a variety of NLP tasks using PyTorch and Hugging Face's Transformers library\n",
+    "- Understand the concepts of pre-trained language models and fine-tuning\n",
+    "- Understand reinforcement learning for NLP and its application in ChatGPT\n"
    ]
   },
   {
@@ -105,6 +105,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ad34de0",
    "metadata": {
@@ -114,19 +115,17 @@
     "tags": []
    },
    "source": [
-    "## 🎲 The Whole Game\n",
+    "## 🎲 Whole Game of NLP\n",
     "\n",
-    "- Harvard Professor David Perkins's book, [Making Learning Whole](https://www.amazon.com/Making-Learning-Whole-Principles-Transform/dp/0470633719), popularized the idea of \"teaching the whole game.\" \n",
-    "- We don't require kids to memorize all the rules of baseball and understand all the technical details before we let them play the game. \n",
-    "- Rather, they start playing with a just general sense of it, and then gradually learn more rules/details as time goes on.\n",
-    "- This course takes this approach to deep learning.\n",
-    "- Most courses on deep learning focus only on what the network “is” and how it works. \n",
-    "- This course is different: instead of teaching just the network, we show how to use it to solve problems. \n",
-    "- We start by teaching a complete, working, very usable deep learning network using simple, expressive tools. Then we show how to use it to solve real-world problems.\n",
-    "- This approach has several advantages:\n",
-    "  - It makes deep learning more accessible and understandable. Students can see how deep learning can be used in practice, and they can immediately start using it to solve their own problems.\n",
-    "  - It helps students learn the whole game of machine learning, not just deep learning. In addition to showing how to use a state-of-the-art deep learning network, we also teach important concepts such as data preprocessing, model evaluation, and deployment.\n",
-    "  - It gives students a strong foundation for further study. Because the course covers both the theory and practice of deep learning, students will be well prepared for more advanced courses on the subject."
+    "In this course, we apply the concept of \"teaching the whole game\" to natural language processing (NLP). We believe that just like in baseball, students should be able to start playing with a general sense of NLP and gradually learn more rules and details as they progress.\n",
+    "\n",
+    "Unlike many NLP courses that focus only on the technical aspects of the field, we take a practical approach to NLP. We show how to use fundamental concepts and techniques of NLP, including text pre-processing, morphology, syntax, semantics, text classification, topic modeling, and word embeddings, to solve real-world problems.\n",
+    "\n",
+    "We begin by introducing students to a complete, working, and very usable NLP system that uses simple and expressive tools. Then, we gradually introduce more advanced concepts, showing students how to apply them to real-world datasets.\n",
+    "\n",
+    "This approach has several advantages. It makes NLP more accessible and understandable to students, and it allows them to immediately start using NLP to solve their own problems. Furthermore, it helps students learn the whole game of NLP, not just individual concepts or techniques. By covering both the theory and practice of NLP, students will be well-prepared for further study or practical applications in the field.\n",
+    "\n",
+    "> Harvard Professor David Perkins's book, [Making Learning Whole](https://www.amazon.com/Making-Learning-Whole-Principles-Transform/dp/0470633719), popularized the idea of \"teaching the whole game.\" \n"
    ]
   },
   {
