docs: add advances in NLP

--- a/book/references.bib
+++ b/book/references.bib
@@ -278,3 +278,97 @@
   volume={28},
   year={2015}
 }
+
+# Thesis
+
+@article{sutskever2014sequence,
+  title={Sequence to sequence learning with neural networks},
+  author={Sutskever, Ilya and Vinyals, Oriol and Le, Quoc V},
+  journal={Advances in neural information processing systems},
+  volume={27},
+  year={2014}
+}
+
+@article{goodfellow2020generative,
+  title={Generative adversarial networks},
+  author={Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  journal={Communications of the ACM},
+  volume={63},
+  number={11},
+  pages={139--144},
+  year={2020},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{voita2019bottom,
+  title={The bottom-up evolution of representations in the transformer: A study with machine translation and language modeling objectives},
+  author={Voita, Elena and Sennrich, Rico and Titov, Ivan},
+  journal={arXiv preprint arXiv:1909.01380},
+  year={2019}
+}
+
+@inproceedings{xu2015show,
+  title={Show, attend and tell: Neural image caption generation with visual attention},
+  author={Xu, Kelvin and Ba, Jimmy and Kiros, Ryan and Cho, Kyunghyun and Courville, Aaron and Salakhudinov, Ruslan and Zemel, Rich and Bengio, Yoshua},
+  booktitle={International conference on machine learning},
+  pages={2048--2057},
+  year={2015},
+  organization={PMLR}
+}
+
+@article{hogan2021knowledge,
+  title={Knowledge graphs},
+  author={Hogan, Aidan and Blomqvist, Eva and Cochez, Michael and d’Amato, Claudia and Melo, Gerard de and Gutierrez, Claudio and Kirrane, Sabrina and Gayo, Jos{\'e} Emilio Labra and Navigli, Roberto and Neumaier, Sebastian and others},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={54},
+  number={4},
+  pages={1--37},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{li2016persona,
+  title={A persona-based neural conversation model},
+  author={Li, Jiwei and Galley, Michel and Brockett, Chris and Spithourakis, Georgios P and Gao, Jianfeng and Dolan, Bill},
+  journal={arXiv preprint arXiv:1603.06155},
+  year={2016}
+}
+
+@inproceedings{huang2016attention,
+  title={Attention-based multimodal neural machine translation},
+  author={Huang, Po-Yao and Liu, Frederick and Shiang, Sz-Rung and Oh, Jean and Dyer, Chris},
+  booktitle={Proceedings of the First Conference on Machine Translation: Volume 2, Shared Task Papers},
+  pages={639--645},
+  year={2016}
+}
+
+@inproceedings{sap2019atomic,
+  title={Atomic: An atlas of machine commonsense for if-then reasoning},
+  author={Sap, Maarten and Le Bras, Ronan and Allaway, Emily and Bhagavatula, Chandra and Lourie, Nicholas and Rashkin, Hannah and Roof, Brendan and Smith, Noah A and Choi, Yejin},
+  booktitle={Proceedings of the AAAI conference on artificial intelligence},
+  volume={33},
+  number={01},
+  pages={3027--3035},
+  year={2019}
+}
+
+@article{yin2020meta,
+  title={Meta-learning for few-shot natural language processing: A survey},
+  author={Yin, Wenpeng},
+  journal={arXiv preprint arXiv:2007.09604},
+  year={2020}
+}
+
+@article{lester2021power,
+  title={The power of scale for parameter-efficient prompt tuning},
+  author={Lester, Brian and Al-Rfou, Rami and Constant, Noah},
+  journal={arXiv preprint arXiv:2104.08691},
+  year={2021}
+}
+
+@book{boddington2017towards,
+  title={Towards a code of ethics for artificial intelligence},
+  author={Boddington, Paula},
+  year={2017},
+  publisher={Springer}
+}
