docs: update intro to aiart

--- a/book/lectures/aiart/intro.ipynb
+++ b/book/lectures/aiart/intro.ipynb
@@ -16,6 +16,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ab6ce7c2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "66d50cc3",
@@ -66,7 +83,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "dc060d8d",
    "metadata": {
@@ -76,9 +92,44 @@
     "tags": []
    },
    "source": [
-    "### Jean Tinguely’s drawing machine\n",
-    "\n",
-    "https://www.youtube.com/embed/Noe5-awlbfw"
+    "### Jean Tinguely’s drawing machine\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ee10a3e2",
+   "metadata": {
+    "tags": [
+     "remove-input"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"720\"\n",
+       "            height=\"405\"\n",
+       "            src=\"https://www.youtube.com/embed/Noe5-awlbfw\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fce68897730>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IFrame(\"https://www.youtube.com/embed/Noe5-awlbfw\", width=\"720\", height=\"405\")"
    ]
   },
   {
