--- a/_sources/lectures/aiart/index.ipynb
+++ b/_sources/lectures/aiart/index.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "76b40700",
    "metadata": {
@@ -10,7 +11,7 @@
     "tags": []
    },
    "source": [
-    "# AI Art (Text-to-Image)\n",
+    "# AI Art (Generative AI)\n",
     "\n",
     "![aiart](../figs/aiart/entelecheia_robot_art.png)"
    ]
