--- a/_sources/lectures/aiart/intro.ipynb
+++ b/_sources/lectures/aiart/intro.ipynb
@@ -133,6 +133,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "ea2a0453",
+   "metadata": {},
+   "source": [
+    "```{youtube} Noe5-awlbfw\n",
+    ":width: 720\n",
+    ":height: 405\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "488aa4d8",
    "metadata": {
